# smart-wallet-prover

./: .gitignore  Dockerfile  README.md  cabal.project  config.yaml  database-init.sh  docker-compose.yaml  smart-wallet-prover-config.yaml  smart-wallet-prover.cabal  zkfold-smart-wallet-prover.cabal
.github/workflows/: docker-image.yml
app/: Main.hs
src/ZkFold/Cardano/SmartWallet/: Api.hs  Orphans.hs  Server.hs  Types.hs  Utils.hs
src/ZkFold/Cardano/SmartWallet/Api/: Encryption.hs  Prove.hs
src/ZkFold/Cardano/SmartWallet/Server/: Handler.hs
src/ZkFold/Cardano/SmartWallet/Types/: Common.hs  Ctx.hs  Encryption.hs  Errors.hs  Prove.hs
web/openapi/: api.yaml
