cabal-version: 3.12
name: smart-wallet-prover
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Vladimir Morozov 
maintainer: info@zkfold.io
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.SmartWallet.Api
    ZkFold.Cardano.SmartWallet.Api.Encryption
    ZkFold.Cardano.SmartWallet.Api.Prove
    ZkFold.Cardano.SmartWallet.Orphans
    ZkFold.Cardano.SmartWallet.Types
    ZkFold.Cardano.SmartWallet.Types.Common
    ZkFold.Cardano.SmartWallet.Types.Ctx
    ZkFold.Cardano.SmartWallet.Types.Encryption
    ZkFold.Cardano.SmartWallet.Types.Errors
    ZkFold.Cardano.SmartWallet.Types.Prove
    ZkFold.Cardano.SmartWallet.Server
    ZkFold.Cardano.SmartWallet.Server.Handler
    ZkFold.Cardano.SmartWallet.Utils

  other-modules:
    PackageInfo_smart_wallet_prover

  autogen-modules:
    PackageInfo_smart_wallet_prover

  build-depends:
    base >=4.18.2.1 && <5,
    adjunctions,
    aeson,
    aeson-casing,
    bytestring,
    containers,
    cryptonite,
    deriving-aeson,
    insert-ordered-containers,
    lens,
    mtl,
    stm,
    servant-server,
    servant-swagger,
    servant-swagger-ui,
    swagger2,
    symbolic-base,
    symbolic-examples,
    text,
    time,
    uuid,
    wai,
    wai-cors,
    wai-extra,
    warp,

  hs-source-dirs: src

executable smart-wallet-prover
  import: common
  main-is: Main.hs
  build-depends:
    base,
    optparse-applicative,
    smart-wallet-prover,

  hs-source-dirs: app
